// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <Orders /> should renders correctly and testing another methods 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="ordersMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={true}
            name="ordersMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Orders"
          />
          <PluginMainPanel
            columnNameSortBy="name"
            emptyDataMessage="No orders"
            filteredData={
              Array [
                Object {
                  "name": "Cardiac-ECG",
                  "orderDate": 1458738936944,
                  "orderDateConvert": "23-Mar-2016",
                  "source": "ethercis",
                  "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
                },
                Object {
                  "name": "Cardiac-ECG",
                  "orderDate": 1458738936944,
                  "orderDateConvert": "23-Mar-2016",
                  "source": "ethercis",
                  "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Order Name",
                  "width": "56%",
                },
                Object {
                  "key": "orderDate",
                  "title": "Date Created",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            id="7ae34463-0770-4a36-bbde-4869bb6a0f05"
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            resourceData={
              Array [
                Object {
                  "name": "Cardiac-ECG",
                  "orderDate": 1458738936944,
                  "orderDateConvert": "23-Mar-2016",
                  "source": "ethercis",
                  "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
                },
                Object {
                  "name": "Cardiac-ECG",
                  "orderDate": 1458738936944,
                  "orderDateConvert": "23-Mar-2016",
                  "source": "ethercis",
                  "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="asc"
            table="orders"
            totalEntriesAmount={2}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Orders /> should renders correctly and testing context and lifecycle componentWillReceiveProps 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="ordersMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={true}
            name="ordersMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Orders"
          />
          <PluginMainPanel
            columnNameSortBy="name"
            emptyDataMessage="No orders"
            filteredData={
              Array [
                Object {
                  "name": "Cardiac-ECG",
                  "orderDate": 1458738936944,
                  "orderDateConvert": "23-Mar-2016",
                  "source": "ethercis",
                  "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
                },
                Object {
                  "name": "Cardiac-ECG",
                  "orderDate": 1458738936944,
                  "orderDateConvert": "23-Mar-2016",
                  "source": "ethercis",
                  "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Order Name",
                  "width": "56%",
                },
                Object {
                  "key": "orderDate",
                  "title": "Date Created",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            id="7ae34463-0770-4a36-bbde-4869bb6a0f05"
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            resourceData={
              Array [
                Object {
                  "name": "Cardiac-ECG",
                  "orderDate": 1458738936944,
                  "orderDateConvert": "23-Mar-2016",
                  "source": "ethercis",
                  "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
                },
                Object {
                  "name": "Cardiac-ECG",
                  "orderDate": 1458738936944,
                  "orderDateConvert": "23-Mar-2016",
                  "source": "ethercis",
                  "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="asc"
            table="orders"
            totalEntriesAmount={2}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <OrdersDetail
          currentPanel="ordersDetail"
          detail={
            Object {
              "author": "Dr John Smith",
              "code": "order3",
              "dateCreated": 1459845501000,
              "name": "Cardiac-ECG",
              "orderDate": 1459845495014,
              "source": "ethercis",
              "sourceId": "7ae34463-0770-4a36-bbde-4869bb6a0f05",
              "terminology": "SNOMED-CT",
            }
          }
          editedPanel={Object {}}
          expandedPanel="all"
          isSubmit={false}
          name="ordersDetail"
          onExpand={[Function]}
          openedPanel="ordersCreate"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Orders /> should renders correctly with empty store 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="ordersMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={true}
            name="ordersMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Orders"
          />
          <PluginMainPanel
            columnNameSortBy="name"
            emptyDataMessage="No orders"
            filteredData={
              Array [
                Object {
                  "name": "Cardiac-ECG",
                  "orderDate": 1458738936944,
                  "orderDateConvert": "23-Mar-2016",
                  "source": "ethercis",
                  "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
                },
                Object {
                  "name": "Cardiac-ECG",
                  "orderDate": 1458738936944,
                  "orderDateConvert": "23-Mar-2016",
                  "source": "ethercis",
                  "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Order Name",
                  "width": "56%",
                },
                Object {
                  "key": "orderDate",
                  "title": "Date Created",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            resourceData={
              Array [
                Object {
                  "name": "Cardiac-ECG",
                  "orderDate": 1458738936944,
                  "orderDateConvert": "23-Mar-2016",
                  "source": "ethercis",
                  "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
                },
                Object {
                  "name": "Cardiac-ECG",
                  "orderDate": 1458738936944,
                  "orderDateConvert": "23-Mar-2016",
                  "source": "ethercis",
                  "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="asc"
            table="orders"
            totalEntriesAmount={2}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Orders /> should renders correctly with forms error 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="ordersMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={true}
            name="ordersMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Orders"
          />
          <PluginMainPanel
            columnNameSortBy="name"
            emptyDataMessage="No orders"
            filteredData={
              Array [
                Object {
                  "name": "Cardiac-ECG",
                  "orderDate": 1458738936944,
                  "orderDateConvert": "23-Mar-2016",
                  "source": "ethercis",
                  "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
                },
                Object {
                  "name": "Cardiac-ECG",
                  "orderDate": 1458738936944,
                  "orderDateConvert": "23-Mar-2016",
                  "source": "ethercis",
                  "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Order Name",
                  "width": "56%",
                },
                Object {
                  "key": "orderDate",
                  "title": "Date Created",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            id="7ae34463-0770-4a36-bbde-4869bb6a0f05"
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            resourceData={
              Array [
                Object {
                  "name": "Cardiac-ECG",
                  "orderDate": 1458738936944,
                  "orderDateConvert": "23-Mar-2016",
                  "source": "ethercis",
                  "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
                },
                Object {
                  "name": "Cardiac-ECG",
                  "orderDate": 1458738936944,
                  "orderDateConvert": "23-Mar-2016",
                  "source": "ethercis",
                  "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="asc"
            table="orders"
            totalEntriesAmount={2}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Orders /> should renders correctly with ordersDetail and testing Create Panel 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="ordersMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={true}
            name="ordersMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Orders"
          />
          <PluginMainPanel
            columnNameSortBy="name"
            emptyDataMessage="No orders"
            filteredData={
              Array [
                Object {
                  "name": "Cardiac-ECG",
                  "orderDate": 1458738936944,
                  "orderDateConvert": "23-Mar-2016",
                  "source": "ethercis",
                  "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
                },
                Object {
                  "name": "Cardiac-ECG",
                  "orderDate": 1458738936944,
                  "orderDateConvert": "23-Mar-2016",
                  "source": "ethercis",
                  "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Order Name",
                  "width": "56%",
                },
                Object {
                  "key": "orderDate",
                  "title": "Date Created",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            id="7ae34463-0770-4a36-bbde-4869bb6a0f05"
            isBtnCreateVisible={false}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            resourceData={
              Array [
                Object {
                  "name": "Cardiac-ECG",
                  "orderDate": 1458738936944,
                  "orderDateConvert": "23-Mar-2016",
                  "source": "ethercis",
                  "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
                },
                Object {
                  "name": "Cardiac-ECG",
                  "orderDate": 1458738936944,
                  "orderDateConvert": "23-Mar-2016",
                  "source": "ethercis",
                  "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="asc"
            table="orders"
            totalEntriesAmount={2}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <PluginCreate
          componentForm={
            <ReduxForm
              isSubmit={false}
              listOrders={
                Array [
                  Object {
                    "code": "order1",
                    "text": "Xray Chest X-ray",
                  },
                  Object {
                    "code": "order2",
                    "text": "Radiology-CT Head",
                  },
                  Object {
                    "code": "order3",
                    "text": "Cardiac-ECG",
                  },
                  Object {
                    "code": "order4",
                    "text": "Physio-crutches",
                  },
                ]
              }
              setChosenOrders={[Function]}
            />
          }
          currentPanel="ordersCreate"
          expandedPanel="all"
          isCreatePanelVisible={true}
          isImport={false}
          name="ordersCreate"
          onCancel={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          openedPanel="ordersCreate"
          title="Create Orders"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Orders /> should renders correctly with ordersDetail and testing Create Panel 2`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="ordersMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={true}
            name="ordersMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Orders"
          />
          <PluginMainPanel
            columnNameSortBy="name"
            emptyDataMessage="No orders"
            filteredData={
              Array [
                Object {
                  "name": "Cardiac-ECG",
                  "orderDate": 1458738936944,
                  "orderDateConvert": "23-Mar-2016",
                  "source": "ethercis",
                  "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
                },
                Object {
                  "name": "Cardiac-ECG",
                  "orderDate": 1458738936944,
                  "orderDateConvert": "23-Mar-2016",
                  "source": "ethercis",
                  "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Order Name",
                  "width": "56%",
                },
                Object {
                  "key": "orderDate",
                  "title": "Date Created",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            id="7ae34463-0770-4a36-bbde-4869bb6a0f05"
            isBtnCreateVisible={false}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            resourceData={
              Array [
                Object {
                  "name": "Cardiac-ECG",
                  "orderDate": 1458738936944,
                  "orderDateConvert": "23-Mar-2016",
                  "source": "ethercis",
                  "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
                },
                Object {
                  "name": "Cardiac-ECG",
                  "orderDate": 1458738936944,
                  "orderDateConvert": "23-Mar-2016",
                  "source": "ethercis",
                  "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="asc"
            table="orders"
            totalEntriesAmount={2}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <PluginCreate
          componentForm={
            <ReduxForm
              isSubmit={false}
              listOrders={
                Array [
                  Object {
                    "code": "order1",
                    "text": "Xray Chest X-ray",
                  },
                  Object {
                    "code": "order2",
                    "text": "Radiology-CT Head",
                  },
                  Object {
                    "code": "order3",
                    "text": "Cardiac-ECG",
                  },
                  Object {
                    "code": "order4",
                    "text": "Physio-crutches",
                  },
                ]
              }
              setChosenOrders={[Function]}
            />
          }
          currentPanel="ordersCreate"
          expandedPanel="all"
          isCreatePanelVisible={true}
          isImport={false}
          name="ordersCreate"
          onCancel={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          openedPanel="ordersCreate"
          title="Create Orders"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Orders /> should renders correctly with ordersPanel and testing Detail Panel 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="ordersMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={true}
            name="ordersMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Orders"
          />
          <PluginMainPanel
            columnNameSortBy="name"
            emptyDataMessage="No orders"
            filteredData={
              Array [
                Object {
                  "name": "Cardiac-ECG",
                  "orderDate": 1458738936944,
                  "orderDateConvert": "23-Mar-2016",
                  "source": "ethercis",
                  "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
                },
                Object {
                  "name": "Cardiac-ECG",
                  "orderDate": 1458738936944,
                  "orderDateConvert": "23-Mar-2016",
                  "source": "ethercis",
                  "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Order Name",
                  "width": "56%",
                },
                Object {
                  "key": "orderDate",
                  "title": "Date Created",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            id="7ae34463-0770-4a36-bbde-4869bb6a0f05"
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            resourceData={
              Array [
                Object {
                  "name": "Cardiac-ECG",
                  "orderDate": 1458738936944,
                  "orderDateConvert": "23-Mar-2016",
                  "source": "ethercis",
                  "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
                },
                Object {
                  "name": "Cardiac-ECG",
                  "orderDate": 1458738936944,
                  "orderDateConvert": "23-Mar-2016",
                  "source": "ethercis",
                  "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="asc"
            table="orders"
            totalEntriesAmount={2}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <OrdersDetail
          currentPanel="ordersDetail"
          detail={
            Object {
              "author": "Dr John Smith",
              "code": "order3",
              "dateCreated": 1459845501000,
              "name": "Cardiac-ECG",
              "orderDate": 1459845495014,
              "source": "ethercis",
              "sourceId": "7ae34463-0770-4a36-bbde-4869bb6a0f05",
              "terminology": "SNOMED-CT",
            }
          }
          editedPanel={Object {}}
          expandedPanel="all"
          isSubmit={false}
          name="ordersDetail"
          onExpand={[Function]}
          openedPanel="ordersPanel"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Orders /> should renders correctly with ordersPanel and testing Detail Panel 2`] = `
<section
  className="page-wrapper"
>
  <div
    className="section full-panel full-panel-details"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <OrdersDetail
          currentPanel="ordersDetail"
          detail={
            Object {
              "author": "Dr John Smith",
              "code": "order3",
              "dateCreated": 1459845501000,
              "name": "Cardiac-ECG",
              "orderDate": 1459845495014,
              "source": "ethercis",
              "sourceId": "7ae34463-0770-4a36-bbde-4869bb6a0f05",
              "terminology": "SNOMED-CT",
            }
          }
          editedPanel={Object {}}
          expandedPanel="ordersPanel"
          isSubmit={false}
          name="ordersDetail"
          onExpand={[Function]}
          openedPanel="ordersPanel"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Orders /> should renders correctly with ordersPanel and testing Detail Panel 3`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    />
  </div>
</section>
`;
